# Src/api/v1/webhooks-workers.php
@@ -1,0 +1,12 @@
+<?php
+
+require_once 'session_validator.php';
+require_once '../../vendor/autoload.php';
+
+use GuiBranco\ProjectsMonitor\Library\Webhooks;
+use GuiBranco\ProjectsMonitor\Library\LogStream;
+
+LogStream::info("API request received", ["endpoint" => "GET /api/v1/webhooks-workers"], "api");
+$webhooks = new Webhooks();
+$data = $webhooks->getWorkers();
+echo json_encode($data);
